--- a/layouts/section/archives.html
+++ b/layouts/section/archives.html
@@ -11,22 +11,28 @@
         <li class="archives-month">{{ .Key }}</li>
         <li class="archives-monthly-container">
           {{- range .Pages }}
-          <ul>
-            <li class="archives-item">
+          <ul style="border-bottom: 1px solid lightgray;">
+            <li class="archives-item" style="border-bottom: none;">
               <a href="{{ .Permalink | relURL }}">{{ .Title }}</a>
+              <time>{{ .Date.Format (default "January 2, 2006" $.Site.Params.dateFormat) }}</time>
+            </li>
+            <li>
               <ul class="taxonomies">
                 {{- if isset .Params "categories" }}
                 {{- range .Params.categories }}
                 <li class="taxonomies-item"><a href="{{ "/" | relURL }}categories/{{ . | urlize }}/"><i class="fa-solid fa-folder"></i>{{ . }}</a></li>
                 {{- end }}
                 {{- end }}
+              </ul>
+            </li>
+            <li>
+              <ul class="taxonomies">
                 {{- if isset .Params "tags" }}
                 {{- range .Params.tags }}
                 <li class="taxonomies-item"><a href="{{ "/" | relURL }}tags/{{ . | urlize }}/"><i class="fa-solid fa-tag"></i>{{ . }}</a></li>
                 {{- end }}
                 {{- end }}
               </ul>
-              <time>{{ .Date.Format (default "January 2, 2006" $.Site.Params.dateFormat) }}</time>
             </li>
           </ul>
           {{- end }}
